# nerfstudio-template

./: README.md  pyproject.toml
nerfstudio_template/: template_config.py  template_datamanager.py  template_field.py  template_model.py  template_pipeline.py
