[project]
name = "nerfstudio-template"
description = "template repository for registering new methods with NerfStudio"
version = "0.1.0"

dependencies = ["nerfstudio==0.3.2"] 


[tool.setuptools.packages.find]
include = ["nerfstudio_template*"]

[project.entry-points.'nerfstudio.method_configs']
nerfstudio-template = 'nerfstudio_template.template_config:template_method'
